--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,22 @@
 databases:
-  - name: ma-raclette
-    databaseName: ma_raclette_production
-    user: ma_raclette
+  - name: postgres
+    ipAllowList: []
 
 services:
   - type: web
-    name: ma-raclette
+    name: rails
     env: ruby
     buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec puma -C config/puma.rb"
+    startCommand: bundle exec rails s
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: ma-raclette
-          property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: postgres
+          property: connectionString
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
